webapp.log
nohup: ignoring input
 * Serving Flask app 'webapp'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://172.30.38.70:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 734-992-045
127.0.0.1 - - [20/Dec/2025 05:11:32] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:35] "GET / HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:35] "[36mGET /static/css/style.css?v=23 HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:36] "POST /sync_single HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:36] "[36mGET /static/manifest.json HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:36] "[33mGET /favicon.ico HTTP/1.1[0m" 404 -
172.30.32.1 - - [20/Dec/2025 05:11:36] "[36mGET /static/icon-192.png HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:38] "POST /sync_single HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:40] "POST /sync_single HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:41] "GET / HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:41] "[36mGET /static/css/style.css?v=23 HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:41] "[36mGET /static/manifest.json HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:41] "[36mGET /static/icon-192.png HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:43] "GET /history/82129002163/saldo HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:43] "[36mGET /static/css/style.css?v=20 HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:46] "[36mGET /static/icon-192.png HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:48] "POST /sync_single HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:48] "GET /history/82129002163/modal HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:48] "[36mGET /static/css/style.css?v=20 HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:11:52] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:11:52] "[36mGET /static/icon-192.png HTTP/1.1[0m" 304 -
172.30.32.1 - - [20/Dec/2025 05:12:02] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:12:12] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:12:22] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:12:32] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:12:42] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:12:52] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:13:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:13:51] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:14:02] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:14:12] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:14:22] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:14:32] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:14:42] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:14:52] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:15:02] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:15:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:16:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:17:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:18:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:19:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:20:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:21:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:22:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:23:25] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:23:32] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:23:42] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:23:52] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:24:02] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:24:12] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:24:22] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:24:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:25:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:26:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:27:44] "GET /api/accounts HTTP/1.1" 200 -
172.30.32.1 - - [20/Dec/2025 05:28:44] "GET /api/accounts HTTP/1.1" 200 -
 * Detected change in '/home/dan/projects/mba-automation-workspace/webapp.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 734-992-045
 * Detected change in '/home/dan/projects/mba-automation-workspace/webapp.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 734-992-045
 * Detected change in '/home/dan/projects/mba-automation-workspace/webapp.py', reloading
 * Restarting with stat
  File "/home/dan/projects/mba-automation-workspace/webapp.py", line 711
    def data_manager.load_accounts():
                    ^
SyntaxError: invalid syntax
